fix(task list): truncate the assignee name if too long
impr(styles): add a text truncate mixin

Truncating a text using CSS takes several properties.
This commit adds a mixin to simplify that.

Related to: CAM-2824

--- a/webapps/client/scripts/filter/styles.less
+++ b/webapps/client/scripts/filter/styles.less
@@ -175,6 +175,13 @@
     color: @gray-light;
     font-weight: bolder;
   }
+
+  .actors {
+    margin-left: 5px;
+    > li {
+      .truncate(100%);
+    }
+  }
 }
 
 .pagination {
