--- a/webapps/client/styles/styles.less
+++ b/webapps/client/styles/styles.less
@@ -185,6 +185,15 @@
 
 
 
+.truncate (@max-width) {
+  max-width: @max-width;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  overflow-y: visible;
+}
+
+
 
 
 .text-help {
